minor issue with spacing in storepage

--- a/react-app/src/components/StorePage/storepage.css
+++ b/react-app/src/components/StorePage/storepage.css
@@ -193,7 +193,7 @@
 }
 
 .after-menu-container {
-	margin-top: 120px;
+	margin-top: 75px;
 	border-bottom: 4px solid #292421;
 	padding-bottom: 40px;
 	display: flex;
